Company Org/src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Concretians__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concretian</label>
        <referenceTo>Concretian__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Concretians__r.FirstName__c</formula>
        <label>FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Report</label>
        <referenceTo>Monthly_Report__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Entry_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Time Entry ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weekly_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekly Report</label>
        <referenceTo>Weekly_Report__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>billable_mins_sum__c</fullName>
        <label>billable-mins-sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>non_billable_mins_sum__c</fullName>
        <label>non-billable-mins-sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_hours_sum__c</fullName>
        <label>total-hours-sum</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_mins_sum__c</fullName>
        <label>total-mins-sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Concretians__c</columns>
        <columns>FirstName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>